--- a/app/Rance Connect/Rance App.csproj
+++ b/app/Rance Connect/Rance App.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\common\RanceConnect.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Chroma">
       <HintPath>..\..\lib\Chroma.dll</HintPath>
     </Reference>
