--- a/app/Rance Connect/Rance App.csproj
+++ b/app/Rance Connect/Rance App.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\common\RanceConnect.csproj" />
+    <ProjectReference Include="..\TestObjects\TestObjects.csproj" />
   </ItemGroup>
 
   <ItemGroup>
