--- a/srv/RanceServer.csproj
+++ b/srv/RanceServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Chroma">
-    <HintPath>..\lib\Chroma.dll</HintPath>
-    </Reference>
+    <PackageReference Include="LiteDB" Version="5.0.19" />
   </ItemGroup>
 
-
+  <ItemGroup>
+    <ProjectReference Include="..\common\RanceConnect.csproj" />
+  </ItemGroup>
 </Project>
