--- a/common/RanceConnect.csproj
+++ b/common/RanceConnect.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DouglasDwyer.PowerSerializer" Version="1.0.0.3"/>
+  </ItemGroup>
+
 </Project>
