Uncached the dockers

--- a/MakeFile
+++ b/MakeFile
@@ -4,7 +4,7 @@ SERVER_IMAGE = "ranceserver"
 all :: server client
 
 server ::
-	docker build ./ -t $(SERVER_IMAGE)
+	docker build ./ -t $(SERVER_IMAGE) --no-cache
 	docker run -d -p 11000:11000 $(SERVER_IMAGE)
 
 client ::
