--- a/common/RanceConnect.csproj
+++ b/common/RanceConnect.csproj
@@ -9,5 +9,9 @@
   <ItemGroup>
     <PackageReference Include="DouglasDwyer.PowerSerializer" Version="1.0.0.3"/>
   </ItemGroup>
+	
+  <ItemGroup>
+    <PackageReference Include="LiteDB" Version="5.0.19" />
+  </ItemGroup>
 
 </Project>
