--- a/app/Rance Connect/Rance App.csproj
+++ b/app/Rance Connect/Rance App.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>Rance_App</RootNamespace>
-    <Nullable>enable</Nullable>
+    <Nullable>disabled</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
